--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     border: 2px solid red;
     min-height: 50vh;
     min-width: 50vw;
+    align-content: flex-start;
+    flex-wrap: wrap;
 }
 
 #grid {
