--- a/style.css
+++ b/style.css
@@ -21,4 +21,6 @@ body {
     align-content: flex-start;
     max-width: 480px;
     max-height: 480px;
+    min-width: 480px;
+    min-width: 480px;
 }
