--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body {
     gap: 10px;
 }
 
+.title {
+    font-size: 60px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 50px;
+}
+
 .content {
     display: flex;
     width: 100%;
@@ -31,11 +37,11 @@ body {
 }
 
 .container {
-    flex: 1 1 auto;
     display: flex;
     flex-wrap: wrap;
     max-width: 480px;
     max-height: 480px;
     min-width: 480px;
     min-width: 480px;
+    
 }
